2001-05-13 09:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * include/hbclass.ch
     % Removed many redundant rules (recently added for OO integrity checks).

     /* Found the PP problem that stopped me from implementing this optimized form before.
        It seems the PP has a problem with "[" follwing a an identifier without a space prefix like:
        #command TEST[([<param,...>])]

        It seems to work OK like this:
        #command TEST [([<param,...>])]
     */

2001-05-12 18:30 GMT+0200 Martin Vogel <vogel@inttec.de>

   + contrib/libct/charmix.c
   - contrib/libct/ctchrmix.c
     ! ctchrmix.c replaced by charmix.c

   + contrib/libct/charone.c
     ! CHARONE() function
     ! WORDONE() function

   + contrib/libct/charonly.c
     ! CHARONLY() function
     ! WORDONLY() function
     ! CHARREM() function
     ! WORDREM() function  !New function!

   + contrib/libct/charsort.c
     ! CHARSORT() function

   + contrib/libct/charswap.c
     ! CHARSWAP() function
     ! WORDSWAP() function

   * contrib/libct/Makefile
     * added charmix.c, removed ctchrmix.c
     + added charone.c
     + added charonly.c
     + added charsort.c
     + added charswap.c

   * contrib/libct/makefile.bc
     * added charmix.c, removed ctchrmix.c
     + added charone.c
     + added charonly.c
     + added charsort.c
     + added charswap.c

   * contrib/libct/makefile.vc
     * added charmix.c, removed ctchrmix.c
     + added charone.c
     + added charonly.c
     + added charsort.c
     + added charswap.c

   * contrib/libct/readme.txt
     ! enhancement list updated !

   * contrib/libct/ctflist.txt
     ! function status list updated !

   + contrib/libct/tests/charmix.prg
   + contrib/libct/tests/charone.prg
   + contrib/libct/tests/charonly.prg
   + contrib/libct/tests/charrem.prg
   + contrib/libct/tests/charsort.prg
   + contrib/libct/tests/charswap.prg
   + contrib/libct/tests/wordone.prg
   + contrib/libct/tests/wordonly.prg
   + contrib/libct/tests/wordrem.prg